moved citations to negative z-index to avoid interference with other elements and links on page

--- a/CSS/general.css
+++ b/CSS/general.css
@@ -102,4 +102,5 @@ main ol>li{
 cite {
   position: absolute;
   opacity: 0;
+  z-index: -10;
 }
